# voyageDL

./: .gitignore  CLAUDE.md  README.md  index.html  package-lock.json  package.json  settings.local.json  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
.github/workflows/: build.yml
scripts/: download-sidecars.sh
src/: App.css  App.d.ts.map  App.js.map  App.tsx  index.css  main.d.ts.map  main.js.map  main.tsx  types.d.ts.map  types.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/scripts/: build-ffmpeg-slim.sh
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: analyze.rs  cache.rs  config.rs  deezer.rs  download.rs  mod.rs  youtube.rs
src-tauri/src/utils/: mod.rs  sidecar.rs
src/components/: Alert.d.ts.map  Alert.js.map  Alert.tsx  DownloadProgress.d.ts.map  DownloadProgress.js.map  DownloadProgress.tsx  DownloadQueue.tsx  MainScreen.d.ts.map  MainScreen.js.map  MainScreen.tsx  Settings.d.ts.map  Settings.js.map  Settings.tsx  SetupScreen.d.ts.map  SetupScreen.js.map  SetupScreen.tsx  TrackList.d.ts.map  TrackList.js.map  TrackList.tsx
src/hooks/: useConfig.d.ts.map  useConfig.js.map  useConfig.ts
